syntax = "proto3";
package proto;

message CommonValues {
    int64 someId = 1;
}